lib/llm/tests/snapshots/openai_completions__valid_samples-5.snap
---
source: tests/openai_completions.rs
description: "should have prompt, model, and frequency_penalty fields"
expression: sample.request
---
{
  "frequency_penalty": -2.0,
  "model": "gpt-3.5-turbo",
  "prompt": "What is the meaning of life?"
}
