lib/llm/tests/snapshots/openai_completions__valid_samples-6.snap
---
source: tests/openai_completions.rs
description: "should have prompt, model, and presence_penalty fields"
expression: sample.request
---
{
  "model": "gpt-3.5-turbo",
  "presence_penalty": -2.0,
  "prompt": "What is the meaning of life?"
}
