lib/llm/tests/snapshots/openai_completions__valid_samples-8.snap
---
source: tests/openai_completions.rs
description: "should have prompt, model, and echo fields"
expression: sample.request
---
{
  "echo": true,
  "model": "gpt-3.5-turbo",
  "prompt": "What is the meaning of life?"
}
