lib/llm/tests/snapshots/openai_completions__valid_samples.snap
---
source: triton-llm/tests/openai_completions.rs
description: should have only prompt and model fields
expression: sample.request
---
{
  "model": "gpt-3.5-turbo",
  "prompt": "What is the meaning of life?"
}
